# genie

./: .gitignore  Cargo.toml  README.md  gemini_cli_official_docs.md
.github/workflows/: ci.yml
docs/: PRD.md  USAGE.md  phase_01_core_cli_and_quota.md  phase_02_docs_repo_prompts.md  phase_03_tauri_ui_and_menubar.md  phase_04_rag_langchain_and_extensions.md
examples/langchain/: README.md  basic_chat.py  rag_chain.py
examples/prompts/: code-review.prompt.md  explain.prompt.md  summarize.prompt.md
genie-cli/: Cargo.toml
genie-cli/src/: main.rs
genie-cli/src/commands/: ask.rs  config.rs  docs.rs  json.rs  mod.rs  quota.rs  rag.rs  repo.rs  service.rs  status.rs  stop.rs  templates.rs  up.rs
genie-cli/src/tui/: mod.rs
genie-core/: Cargo.toml
genie-core/src/: config.rs  docs.rs  embeddings.rs  gemini.rs  lib.rs  model.rs  pdf.rs  quota.rs  rag.rs  repo.rs  server.rs  templates.rs
genie-ui/: package-lock.json  package.json
genie-ui/src/: App.tsx  types.ts
genie-ui/src-tauri/: Cargo.toml  tauri.conf.json
genie-ui/src-tauri/capabilities/: default.json
genie-ui/src-tauri/src/: lib.rs  main.rs  state.rs
genie-ui/src-tauri/src/commands/: chat.rs  config.rs  docs.rs  mod.rs  quota.rs  repo.rs  templates.rs
genie-ui/src/components/: ChatWorkspace.tsx  DocsWorkspace.tsx  PromptsWorkspace.tsx  QuotaWorkspace.tsx  RepoWorkspace.tsx  Sidebar.tsx
genie-ui/src/hooks/: useGenie.ts
genie-ui/src/styles/: globals.css
