[workspace]
resolver = "2"
members = ["genie-core", "genie-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Genie Contributors"]
repository = "https://github.com/yourusername/genie"
description = "Local Gemini-as-a-service: wraps the official gemini CLI with quota tracking and power tools"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
dirs = "5.0"
tera = "1.20"

# PDF processing (Phase 2)
lopdf = "0.34"

# File walking (Phase 2)
walkdir = "2.5"
ignore = "0.4"

