[package]
name = "genie-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Genie - Local Gemini-as-a-service"
repository.workspace = true
homepage = "https://github.com/celilygt/genie"
documentation = "https://docs.rs/genie-cli"
readme = "../README.md"
keywords = ["gemini", "ai", "cli", "openai", "google"]
categories = ["command-line-utilities"]

[[bin]]
name = "genie"
path = "src/main.rs"

[dependencies]
genie-core = { path = "../genie-core" }

tokio = { workspace = true }
axum = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# For reading stdin
atty = "0.2"

# HTTP client for status checks
reqwest = { version = "0.12", features = ["json"] }

# For async streams in TUI
futures = "0.3"

# For path utilities
dirs = { workspace = true }

# For opening URLs in browser
open = "5.3"