[package]
name = "genie-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Genie - Gemini CLI wrapper with quota tracking"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
tempfile = "3.14"

