[package]
name = "genie-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Genie - Gemini CLI wrapper with quota tracking"
repository.workspace = true
homepage = "https://github.com/celilygt/genie"
documentation = "https://docs.rs/genie-core"
keywords = ["gemini", "ai", "cli", "quota", "google"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# PDF processing
lopdf = { workspace = true }

# File walking for repo summary
walkdir = { workspace = true }
ignore = { workspace = true }

# Templating
tera = { workspace = true }

# Regex for chapter detection
regex = "1.11"

# Pattern matching for RAG
glob = "0.3"

[dev-dependencies]
tempfile = "3.14"

