[package]
name = "genie-ui"
version = "0.1.0"
description = "Genie Desktop UI - Local Gemini-as-a-service"
authors = ["Genie Contributors"]
edition = "2021"

[lib]
name = "genie_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP server for API
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Genie core library
genie-core = { path = "../../genie-core" }

